@@ -2266,10 +2266,9 @@ sig
                    | VtQed of vernac_qed_type
                    | VtProofStep of proof_step
                    | VtProofMode of string
-                   | VtQuery of vernac_part_of_script * report_with
+                   | VtQuery of vernac_part_of_script * Feedback.route_id
                    | VtStm of vernac_control * vernac_part_of_script
                    | VtUnknown
-   and report_with = Stateid.t * Feedback.route_id
    and vernac_qed_type = Vernacexpr.vernac_qed_type =
                        | VtKeep
                          | VtKeepAsAxiom
